# rbkairos_moveit_config

./: CMakeLists.txt  README.md  package.xml
config/: chomp_planning.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ur5e_robotiq.ros2_control.xacro  ur5e_robotiq.srdf  ur5e_robotiq.srdf.xacro  ur5e_robotiq.urdf  ur5e_robotiq.urdf.xacro
launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
srdf/: rbkairos.srdf
