<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rbkairos_moveit_config</name>
  <version>0.1.0</version>
  <description>MoveIt2 configuration for RB-Kairos+ mobile manipulator with UR5e arm and Robotiq
    gripper</description>
  <maintainer email="prabiee@3laws.io">Pedram Rabiee</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rbkairos_bringup</exec_depend>

  <depend>moveit_visual_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
